<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2014 Lucien Loiseau
  ~ This file is part of Rumble.
  ~ Rumble is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ Rumble is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License along
  ~ with Rumble.  If not, see <http://www.gnu.org/licenses/>.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top"
    android:background="#c8000000">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_storage_white_24dp"/>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings_storage"
                android:textAppearance="@android:style/TextAppearance.Medium"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/settings_storage_total"/>
            <TextView
                android:id="@+id/storage_total_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="11.64 MB"
                android:textAppearance="@android:style/TextAppearance.Large"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/clear_data"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_clear_data"/>
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="#ffffff"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_timelapse_white_24dp"/>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings_usage"
                android:textAppearance="@android:style/TextAppearance.Medium"/>

            <TextView
                android:id="@+id/app_detail_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/settings_detail_app"/>
            <org.disrupted.rumble.userinterface.views.SimpleHistogram
                android:id="@+id/usage_detail_app"
                android:layout_width="fill_parent"
                android:layout_height="10dp"/>

            <TextView
                android:id="@+id/db_detail_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/settings_detail_db"/>
            <org.disrupted.rumble.userinterface.views.SimpleHistogram
                android:id="@+id/usage_detail_db"
                android:layout_width="fill_parent"
                android:layout_height="10dp"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/clear_statuses"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_clear_push"/>
                <Button
                    android:id="@+id/clear_chat"
                    android:layout_marginLeft="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_clear_chat"/>
            </LinearLayout>

            <TextView
                android:id="@+id/file_detail_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/settings_detail_file"/>
            <org.disrupted.rumble.userinterface.views.SimpleHistogram
                android:id="@+id/usage_detail_file"
                android:layout_width="fill_parent"
                android:layout_height="10dp"/>
            <Button
                android:id="@+id/clear_files"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings_clear_files"/>
            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="#ffffff"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>