<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2014 Lucien Loiseau
  ~ This file is part of Rumble.
  ~ Rumble is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ Rumble is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License along
  ~ with Rumble.  If not, see <http://www.gnu.org/licenses/>.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".GroupListActivity" >

    <item android:id="@+id/action_create_group"
        android:title="@string/action_create_group"
        android:icon="@drawable/ic_add_white_24dp"
        android:orderInCategory="100"
        app:showAsAction="always" />

    <item android:id="@+id/action_scan_qrcode"
        android:title="@string/action_scan_qrcode"
        android:icon="@drawable/ic_scan_qrcode"
        android:orderInCategory="100"
        app:showAsAction="always" />

    <item android:id="@+id/action_input_key"
        android:title="@string/action_input_key"
        android:icon="@drawable/ic_mode_edit_white_24dp"
        android:orderInCategory="100"
        app:showAsAction="always" />

</menu>