<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2014 Lucien Loiseau
  ~ This file is part of Rumble.
  ~ Rumble is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ Rumble is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License along
  ~ with Rumble.  If not, see <http://www.gnu.org/licenses/>.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".GroupDetailActivity" >

    <item android:id="@+id/group_action_invite"
        android:title="@string/group_action_invite_user"
        android:icon="@drawable/ic_person_add_white_24dp"
        android:orderInCategory="100"
        app:showAsAction="always" />

    <item android:id="@+id/group_action_delete"
        android:title="@string/group_action_delete"
        android:icon="@drawable/ic_delete_white_24dp"
        android:orderInCategory="100"
        app:showAsAction="always" />

    <item android:id="@+id/group_action_leave"
        android:title="@string/group_action_leave"
        android:icon="@drawable/ic_exit_24px"
        android:orderInCategory="100"
        app:showAsAction="always" />


</menu>